Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2739

Crash in QmlJSDebugger selectiontool

XMLWordPrintable

    • 87bb227604fb

      0	raise	/lib64/libc.so.6	0	0x7ffff3e719e5	
      1	abort	/lib64/libc.so.6	0	0x7ffff3e72ee6	
      2	qt_message_output	qglobal.cpp	2282	0x7ffff4bc3f28	
      3	qt_message(QtMsgType, const char *, typedef __va_list_tag __va_list_tag *)	qglobal.cpp	2328	0x7ffff4bc40a4	
      4	qFatal	qglobal.cpp	2511	0x7ffff4bc4912	
      5	qt_assert_x	qglobal.cpp	2035	0x7ffff4bc3b1b	
      6	QList<QGraphicsItem*>::at	qlist.h	456	0x41d249	
      7	QmlJSDebugger::SelectionTool::wheelEvent	selectiontool.cpp	375	0x41c22e	
      8	QmlJSDebugger::QDeclarativeViewObserver::wheelEvent	qdeclarativeviewobserver.cpp	388	0x4304d3	
      9	QmlJSDebugger::QDeclarativeViewObserver::eventFilter	qdeclarativeviewobserver.cpp	185	0x42f473	
      10	QCoreApplicationPrivate::sendThroughObjectEventFilters	qcoreapplication.cpp	847	0x7ffff4cec425	
      11	QApplicationPrivate::notify_helper	qapplication.cpp	4441	0x7ffff52b8fed	
      12	QApplication::notify	qapplication.cpp	4061	0x7ffff52b7438	
      13	QCoreApplication::notifyInternal	qcoreapplication.cpp	732	0x7ffff4cec113	
      14	QCoreApplication::sendSpontaneousEvent	qcoreapplication.h	218	0x7ffff52bbfcd	
      15	QETWidget::translateWheelEvent	qapplication_x11.cpp	4476	0x7ffff535a5d7	
      16	QETWidget::translateMouseEvent	qapplication_x11.cpp	4253	0x7ffff5359b54	
      17	QApplication::x11ProcessEvent	qapplication_x11.cpp	3442	0x7ffff5356cc9	
      18	x11EventSourceDispatch	qguieventdispatcher_glib.cpp	146	0x7ffff5390b60	
      19	g_main_context_dispatch	/usr/lib64/libglib-2.0.so.0	0	0x7ffff24dfa93	
      20	??	/usr/lib64/libglib-2.0.so.0	0	0x7ffff24e0270	
      ...	<More>
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kkohne Kai Köhne
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes