QmlJSDebugger: Don't crash when using wheel & no items selected

Task-number: QTCREATORBUG-2739
Reviewed-by: Lasse Holmstedt